add dashboard logging

--- a/package.json
+++ b/package.json
@@ -13,6 +13,7 @@
     "apiai": "^3.0.3",
     "async": "^2.0.0",
     "body-parser": "^1.15.2",
+    "dashbot": "^0.8.4",
     "express": "^4.13.3",
     "html-entities": "^1.2.0",
     "json-bigint": "^0.2.0",
